<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginMainActivity">

    <TextView
        android:id="@+id/bienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#4282B8"
        android:layout_marginTop="30dp"
        android:text="@string/bienvenido"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/nombre_info"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/cedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/cedula_info"
        android:textAlignment="center"
        />



    <Button

        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/editar_datos"
        android:backgroundTint="#FF9800"/>

    <Button
        android:id="@+id/btnPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cambiar_contrase_a"
        android:backgroundTint="#3F51B5"/>

    <Button
        android:id="@+id/btnSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/cerrar_sesion"
        android:backgroundTint="#A90707"/>


</LinearLayout>