<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginMainActivity">


    <TextView
        android:id="@+id/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#4282B8"
        android:layout_marginTop="30dp"
        android:text="@string/editar_datos"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/changeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/changeCedula"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/cedula_edit"
        />

    <Button
        android:id="@+id/btnChangeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/guardar_cambios"
        android:backgroundTint="#00BCD4"/>


</LinearLayout>