<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginMainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="257dp"
        android:layout_height="241dp"
        app:srcCompat="@drawable/iconsesion"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/inCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cedula"
        android:layout_marginTop="50dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/inPassword"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/iniciar_sesion"
        android:backgroundTint="#00BCD4"/>


</LinearLayout>